--- a/client/src/main/resources/static/index.html
+++ b/client/src/main/resources/static/index.html
@@ -32,7 +32,9 @@
                         ,{field:'name', width:200, title: '菜品'}
                         ,{field:'price', width:100, title: '单价'}
                         ,{field:'flavor', width:100, title: '口味'}
-                        ,{field:'tid',width:100,  title: '分类'
+                        ,{field:'type',width:100,  title: '分类',templet:function (data) {
+                            return data.type.name
+                        }
                     }
                         ,{fixed: 'right', title:'操作', toolbar: '#barDemo', width:70}
                     ]
